--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
 }
+html {
+}
 body {
   font-size: 16px;
   padding: 2rem 6rem 0;
-  font-family: "Be Vietnam";
+  font-family: Be Vietnam Pro, sans-serif;
 }
 li {
   display: inherit;
