--- a/style.css
+++ b/style.css
@@ -453,6 +453,7 @@ h4 {
     width: 100%;
   }
 }
+
 /* Styling the Footer */
 
 .app__footer {
@@ -470,7 +471,7 @@ h4 {
 }
 .footer__icon > img {
   filter: brightness(0) invert(1);
-  width: 80%;
+  width: auto;
 }
 .icon > i {
   width: max-content;
@@ -487,9 +488,8 @@ h4 {
   color: var(--bright_red);
   cursor: pointer;
 }
-.footer__form {
+.mobile {
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
 }
 .form {
@@ -499,7 +499,7 @@ h4 {
   align-content: flex-start;
   gap: 7px;
 }
-.form > button {
+.form button {
   width: max-content;
   padding: 0.8rem 1.3rem;
   background-color: var(--bright_red);
@@ -526,26 +526,32 @@ input {
   padding: 0.8rem;
   border-radius: 2rem;
 }
+.footer__copywrite {
+  width: 100%;
+}
 
 @media screen and (max-width: 900px) {
   .app__footer {
-    padding: 2rem 1rem;
     flex-direction: column;
+    padding: 2rem 1rem;
     position: relative;
     justify-content: center;
     align-items: center;
     align-content: center;
-    width: 100%;
+    width: auto;
   }
-  .footer__form {
-    order: 1;
-  }
+
   .footer_menue {
     flex-direction: row;
   }
   .mobile {
     display: flex;
-    gap: 55px;
+    width: 100%;
+    order: 2;
+    padding: 1rem 2rem;
+  }
+  .mobile ul {
+    justify-content: space-between;
   }
 
   .footer__icon > img {
@@ -567,5 +573,30 @@ input {
   .icon > i {
     font-size: 25px;
     padding-bottom: 15px;
+  }
+
+  .form {
+    width: 100%;
+    order: 1;
+    justify-content: space-between;
+  }
+  .form div {
+    width: 100%;
+  }
+  .form input {
+    width: 100%;
+  }
+  .form button {
+    padding: 0.8rem 2.6rem;
+  }
+  .footer__copywrite {
+    padding-top: 30px;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    order: 4;
+  }
+  .footer__copywrite p {
+    font-size: small;
   }
 }
