--- a/style.css
+++ b/style.css
@@ -163,7 +163,6 @@ p {
     display: block;
   }
   .chart__img > img {
-    position: relative;
     height: auto;
     z-index: 1;
   }
@@ -178,7 +177,7 @@ p {
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 1rem;
+    gap: 1px;
     padding-bottom: 2rem;
   }
   .content__chart > .chart__text {
@@ -271,8 +270,6 @@ p {
 }
 .about__left > p {
   padding-bottom: 2rem;
-  width: 80%;
-  text-align: left;
 }
 
 /* Styling the Right */
@@ -306,19 +303,18 @@ h4 {
     justify-content: center;
     align-items: center;
     align-content: center;
-    padding: 2rem 1rem 0;
+    padding: 2rem 0rem 0 1rem;
     padding-bottom: 2rem;
     gap: 1rem;
   }
 
   .about__left > h1 {
     padding-bottom: 1rem;
-    width: 100%;
+
     text-align: center;
     font-weight: bolder;
   }
   .about__left > p {
-    width: auto;
     text-align: center;
     padding-bottom: 10px;
   }
@@ -326,21 +322,37 @@ h4 {
     width: 100%;
   }
   .right__numbers {
+    flex-direction: column;
     align-content: flex-start;
     align-items: baseline;
-    justify-content: center;
+    justify-content: baseline;
     display: flex;
-  }
-  .text > h4 {
-    background-color: var(--very_pale_red);
+    padding-bottom: 2rem;
   }
 
-  .right__numbers {
-    align-content: flex-start;
-    align-items: baseline;
-    display: flex;
-    gap: 4px;
-    padding-bottom: 3rem;
+  .number {
+    z-index: 1;
+  }
+  .text {
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+  .text > h4 {
+    position: absolute;
+    background-color: var(--very_pale_red);
+    padding: 1.4% 0;
+    font-size: 15px;
+    font-weight: 700;
+    text-align: center;
+
+    width: 100%;
+
+    margin-top: -54px;
+  }
+  .text p {
+    width: 100%;
+    text-align: start;
   }
 }
 
