styling the button

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 
   --bright_red: hsl(12, 88%, 59%);
   --dark_blue: hsl(228, 39%, 23%);
-
+  --sahdow: hsl(12, 91%, 79%);
   /* ### Neutral */
 
   --dark_grayish_blue: hsl(227, 12%, 61%);
