--- a/style.css
+++ b/style.css
@@ -252,6 +252,7 @@ p {
     background-color: var(--vary_light_gray);
     z-index: 1;
     text-align: center;
+    box-shadow: 0px 25rem 80rem 180px rgba(75, 75, 74, 0.747);
   }
 
   .header__mobile {
@@ -352,6 +353,7 @@ h4 {
   .number {
     z-index: 1;
   }
+
   .text {
     justify-content: center;
     align-items: center;
@@ -364,11 +366,11 @@ h4 {
     font-size: 15px;
     font-weight: 700;
     text-align: center;
-
     width: 100%;
-
     margin-top: -54px;
+    margin-left: 15px;
   }
+
   .text p {
     width: 100%;
     text-align: start;
