--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@
 body {
   font-size: 16px;
   font-family: Be Vietnam Pro, sans-serif;
-  background-image: url(./images/bg-tablet-pattern.svg);
-  background-position: 158% -14%;
-  background-repeat: no-repeat;
-  object-fit: contain;
+}
+
+@media screen and (min-width: 800px) {
+  body {
+    background-image: url(./images/bg-tablet-pattern.svg);
+    background-position: 158% -14%;
+    background-repeat: no-repeat;
+    object-fit: contain;
+  }
 }
 li {
   display: inherit;
